Kubernetes/Headlamp/ig-headlamp.yaml
#apiVersion: traefik.io/v1alpha1
#kind: Middleware
#metadata:
#  name: monitoring-headlamp-https-redirect
#  namespace: kube-system
#spec:
#  redirectScheme:
#    scheme: https
#    permanent: true
#---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitoring-headlamp-security
  namespace: kube-system
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-headlamp-websecure
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`headlamp.domain.com`)
      services:
      - name: headlamp
        port: 80
        serversTransport: monitoring-headlamp-transport
      middlewares:
        - name: monitoring-headlamp-security
  tls:
    secretName: headlamp-domain-com
    options:
      name: monitoring-headlamp-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-headlamp-web
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`headlamp.domain.com`)
      services:
      - name: headlamp
        port: 80
          #      middlewares:
          #        - name: monitoring-headlamp-https-redirect
